# humanoid-rl

./: README.md  outputs  pyproject.toml  repomix-output.xml  run_mixed.out
algos/: __init__.py  warm_start.py
algos/epo/: epo.py  ga.py  trainer.py
algos/ppo/: buffer.py  network.py  ppo.py  trainer.py
algos/rsl_rl_ppo/: __init__.py  trainer.py
algos/sapg/: buffer.py  network.py  sapg.py  trainer.py
assets/objects/: cube_multicolor.usd  cube_multicolor_goal.usd
assets/robots/: g1_cfg.py
configs/: eval.yaml  train.yaml
configs/algo/: epo.yaml  ppo.yaml  rsl_rl_ppo.yaml  sapg.yaml
configs/task/: box_transport.yaml  reorient.yaml  velocity_tracking.yaml
docs/: sapg_plan.md
evaluators/: __init__.py  base.py  utils.py
hrl_utils/: logging.py  normalization.py  paths.py
manipulation/algos/: __init__.py
manipulation/algos/epo/: epo.py  trainer.py
manipulation/robots/: g1.py
manipulation/tasks/: __init__.py
manipulation/utils/: paths.py
scripts/: create_insert_assets.py  create_multicolor_cube.py  debug_respawn.py  eval.py  scene_load.py  train.py  verify_cube.py
scripts/sbatch/: _box_transport_train.tpl.sh  _box_transport_warmstart.tpl.sh  box_transport_epo_scratch.sbatch  box_transport_epo_warmstart.sbatch  box_transport_ppo_scratch.sbatch  box_transport_ppo_warmstart.sbatch  box_transport_sapg_scratch.sbatch  box_transport_sapg_warmstart.sbatch
tasks/: __init__.py
tasks/locomotion/: __init__.py
tasks/manipulation/: __init__.py
tools/: cmd.txt  commands.sh  eval_latest_all.sh  inspect_ckpt.py  pycache_remove.sh
(+39 files in other folders)
