[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanoid-manipulation"
version = "0.1.0"
description = "Reinforcement learning for G1 humanoid manipulation tasks (IsaacLab + custom PPO/SAPG)."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["manipulation*"]
exclude = ["tests*", "scripts*", "tools*", "utils*", "docs*", "configs*", "assets*"]
