[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanoid-rl"
version = "0.1.0"
description = "Reinforcement learning on the Unitree G1 humanoid (manipulation now, locomotion later) — custom PPO/SAPG/EPO on IsaacLab."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
# Importable packages: shared (algos, evaluators, utils), task tree (tasks
# with manipulation/locomotion sub-packages), and assets (robot cfg lives at
# assets/robots/g1_cfg.py alongside the USD files under assets/robots/g1/).
include = ["algos*", "evaluators*", "utils*", "tasks*", "assets*"]
exclude = ["tests*", "scripts*", "tools*", "docs*", "configs*"]
